--- a/styles/second.css
+++ b/styles/second.css
@@ -47,6 +47,12 @@
     border-radius: 50px;
 }
 
+
+.portfolio-link:hover {
+    color: #f37a6c;
+    cursor: pointer;
+}
+
 @media only screen and (max-width: 700px) {
     .segundoConteudo {
         font-size: 14px;
